k8s/base/observability.yaml
apiVersion: v1
kind: Service
metadata:
  name: bhm-broker-observability
spec:
  selector:
    app.kubernetes.io/name: mosquitto
  ports:
    - name: http
      port: 9102
      targetPort: http
